v0.10.0/_sources/generated/statsmodels.regression.linear_model.RegressionResults.rst.txt
statsmodels.regression.linear\_model.RegressionResults
======================================================

.. currentmodule:: statsmodels.regression.linear_model

.. autoclass:: RegressionResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         RegressionResults.HC0_se
         RegressionResults.HC1_se
         RegressionResults.HC2_se
         RegressionResults.HC3_se
         RegressionResults.aic
         RegressionResults.bic
         RegressionResults.bse
         RegressionResults.centered_tss
         RegressionResults.compare_f_test
         RegressionResults.compare_lm_test
         RegressionResults.compare_lr_test
         RegressionResults.condition_number
         RegressionResults.conf_int
         RegressionResults.cov_HC0
         RegressionResults.cov_HC1
         RegressionResults.cov_HC2
         RegressionResults.cov_HC3
         RegressionResults.cov_params
         RegressionResults.eigenvals
         RegressionResults.ess
         RegressionResults.f_pvalue
         RegressionResults.f_test
         RegressionResults.fittedvalues
         RegressionResults.fvalue
         RegressionResults.get_prediction
         RegressionResults.get_robustcov_results
         RegressionResults.initialize
         RegressionResults.llf
         RegressionResults.load
         RegressionResults.mse_model
         RegressionResults.mse_resid
         RegressionResults.mse_total
         RegressionResults.nobs
         RegressionResults.normalized_cov_params
         RegressionResults.predict
         RegressionResults.pvalues
         RegressionResults.remove_data
         RegressionResults.resid
         RegressionResults.resid_pearson
         RegressionResults.rsquared
         RegressionResults.rsquared_adj
         RegressionResults.save
         RegressionResults.scale
         RegressionResults.ssr
         RegressionResults.summary
         RegressionResults.summary2
         RegressionResults.t_test
         RegressionResults.t_test_pairwise
         RegressionResults.tvalues
         RegressionResults.uncentered_tss
         RegressionResults.wald_test
         RegressionResults.wald_test_terms
         RegressionResults.wresid



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         RegressionResults.use_t

