v0.15.0/_sources/generated/statsmodels.regression.linear_model.RegressionResults.rst.txt
statsmodels.regression.linear\_model.RegressionResults
======================================================

.. currentmodule:: statsmodels.regression.linear_model

.. autoclass:: RegressionResults
   :exclude-members: compare_f_test,compare_lm_test,compare_lr_test,conf_int,cov_params,f_test,get_prediction,get_robustcov_results,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,scale,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~RegressionResults.compare_f_test
      ~RegressionResults.compare_lm_test
      ~RegressionResults.compare_lr_test
      ~RegressionResults.conf_int
      ~RegressionResults.cov_params
      ~RegressionResults.f_test
      ~RegressionResults.get_prediction
      ~RegressionResults.get_robustcov_results
      ~RegressionResults.info_criteria
      ~RegressionResults.initialize
      ~RegressionResults.load
      ~RegressionResults.normalized_cov_params
      ~RegressionResults.predict
      ~RegressionResults.remove_data
      ~RegressionResults.save
      ~RegressionResults.scale
      ~RegressionResults.summary
      ~RegressionResults.summary2
      ~RegressionResults.t_test
      ~RegressionResults.t_test_pairwise
      ~RegressionResults.wald_test
      ~RegressionResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~RegressionResults.HC0_se
      ~RegressionResults.HC1_se
      ~RegressionResults.HC2_se
      ~RegressionResults.HC3_se
      ~RegressionResults.aic
      ~RegressionResults.bic
      ~RegressionResults.bse
      ~RegressionResults.centered_tss
      ~RegressionResults.condition_number
      ~RegressionResults.cov_HC0
      ~RegressionResults.cov_HC1
      ~RegressionResults.cov_HC2
      ~RegressionResults.cov_HC3
      ~RegressionResults.eigenvals
      ~RegressionResults.ess
      ~RegressionResults.f_pvalue
      ~RegressionResults.fittedvalues
      ~RegressionResults.fvalue
      ~RegressionResults.llf
      ~RegressionResults.mse_model
      ~RegressionResults.mse_resid
      ~RegressionResults.mse_total
      ~RegressionResults.nobs
      ~RegressionResults.pvalues
      ~RegressionResults.resid
      ~RegressionResults.resid_pearson
      ~RegressionResults.rsquared
      ~RegressionResults.rsquared_adj
      ~RegressionResults.ssr
      ~RegressionResults.tvalues
      ~RegressionResults.uncentered_tss
      ~RegressionResults.use_t
      ~RegressionResults.wresid
   
   
   